--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,14 @@ table {
 	border-spacing: 0;
 }
 body{
-	background-color: aliceblue;
+	background-color: lightblue;
 }
+
+
+.opening-article{
+	align-content: center;
+	background-color: white;
+}
+
+
 
