--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,11 @@ body{
 	align-content: center;
 	background-color: white;
 }
+#heading-one {
+	text-shadow: 5px;
+	text-decoration: underline;
+
+}
 
 
 
